# exam---7

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: release.yml
include/: command.h
src/: bulk.cpp
